Closed Bug 1914537 Opened 2 years ago Closed 2 years ago

[loongarch][mips] Failed to build js due to movements of architecture-specific CodeGenerator code

Categories

(Core :: JavaScript Engine: JIT, defect, P1)

defect

Tracking

()

RESOLVED FIXED
131 Branch
Tracking Status
firefox131 --- fixed

People

(Reporter: zhaojiazhong-hf, Assigned: zhaojiazhong-hf)

References

(Blocks 2 open bugs)

Details

Attachments

(1 file)

Bug 1913413 moved some architecture-specific CodeGenerator code, and caused build errors about cmp64Set and branchTest64 on loongarch64 and mips64 platforms.

Assignee: nobody → zhaojiazhong-hf
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Severity: -- → S3
Priority: -- → P1
Pushed by iireland@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/4448fcc8d15b [loongarch][mips] Fix cmp64Set and branchTest64 function. r=iain
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 131 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: