Bug 1914537 - [loongarch][mips] Fix cmp64Set and branchTest64 function. r=iain

Differential Revision: https://phabricator.services.mozilla.com/D219940