js/src/jit/mips64/MacroAssembler-mips64.cpp
@@ -946,16 +946,23 @@ void MacroAssemblerMIPS64::ma_cmp_set(Register rd, Register rs, ImmWord imm,
   }
 }
 
+void MacroAssemblerMIPS64::ma_cmp_set(Register rd, Register rs, ImmPtr imm,
+                                      Condition c) {
+  ma_cmp_set(rd, rs, ImmWord(uintptr_t(imm.value)), c);
+}
+
+void MacroAssemblerMIPS64::ma_cmp_set(Register rd, Address address, Register rt,
+                                      Condition c) {
+  SecondScratchRegisterScope scratch2(asMasm());
+  ma_load(scratch2, address, SizeDouble);
+  ma_cmp_set(rd, scratch2, rt, c);
+}
+
 void MacroAssemblerMIPS64::ma_cmp_set(Register rd, Address address, ImmWord imm,
                                       Condition c) {
   SecondScratchRegisterScope scratch2(asMasm());
   ma_load(scratch2, address, SizeDouble);
   ma_cmp_set(rd, scratch2, imm, c);
-}
-
-void MacroAssemblerMIPS64::ma_cmp_set(Register rd, Register rs, ImmPtr imm,
-                                      Condition c) {
-  ma_cmp_set(rd, rs, ImmWord(uintptr_t(imm.value)), c);
 }
 
 void MacroAssemblerMIPS64::ma_cmp_set(Register rd, Address address, Imm32 imm,
